@@ -12,6 +12,31 @@ A Java application that simulates a cinema cashier experience. The user can orde
 | Alexander Temelin  | AlexanderTemelin    |
 
 ## Build and Run Instructions
+### Prerequisites
+- Ensure you have **Gradle** installed, or use the included Gradle Wrapper (`./gradlew`).
+- Ensure you have **JavaFX SDK** downloaded and extracted on your system.
+---
+
+### Running the Project with Gradle
+
+1. Open a terminal or command prompt.
+2. Navigate to the **project root directory** (where `gradlew` is located).
+3. Run the following command to build and run the project:
+   ```bash
+   ./gradlew run
+4. The project will compile and launch automatically.
+
+### Running the Project with the JAR File
+If you want to run the built .jar file manually, follow these steps:
+1. Make sure you have built the project JAR file (usually located in build/libs/).
+2. Locate your JavaFX SDK lib folder path. Example:
+   C:\Users\chri\Downloads\openjfx-21.0.7_windows-x64_bin-sdk\javafx-sdk-21.0.7\lib
+3. Run the .jar with Java command and specify the JavaFX modules:
+
+Example: java --module-path "C:\Users\chri\Downloads\openjfx-21.0.7_windows-x64_bin-sdk\javafx-sdk-21.0.7\lib" --add-modules javafx.controls,javafx.fxml -jar .\build\libs\Cinema-1.0-SNAPSHOT-all.jar
+Note:
+- You must be inside the project directory to use ./gradlew run.
+- When running the .jar manually, make sure to correctly set the --module-path to your JavaFX SDK lib directory.
 
 ## Project Description
 
@@ -21,6 +46,7 @@ This application simulates the user interface of a cinema cashier. It allows cus
 - Purchase tickets for movies,
 - Be assigned a seat in a room with numbered rows and seats,
 - Receive a printed receipt.
+- Receive tickets for specified movies.
 
 The simulation includes UI elements for selecting products, a real-time display of the total cost, and logic for room/seat allocation.
 
